<resources>
    <string name="app_name">Movie List</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="search">Search</string>
    <string name="title_activity_movie_detail">Movie Detail</string>
    <string name="load_more">Load more..</string>
    <string name="summary">Summary</string>
    <string name="director">Director</string>
    <string name="writers">Writers</string>
    <string name="details">Details</string>
    <string name="released">Released</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="cast">Cast</string>
    <string name="genres">Genres</string>
    <string name="synopsis">Synopsis</string>
    <string name="tagline">Tagline</string>
    <string name="plot_summary">Plot Summary</string>
    <string name="storyline">Storyline</string>
    <string name="language_spoken">Language Spoken</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="tmdb_username">TMDb username</string>
    <string name="tmdb_password">TMDb password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Log in</string>
    <string name="my_favorite">My Favorite</string>
    <string name="login_dialog_title">Log in using TMDb credentials</string>
    <string name="title_activity_login">Login</string>
</resources>
