<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainpage.MainActivity"
    android:orientation="vertical">
    
    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        
        <FrameLayout android:layout_width="match_parent"
             android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/mainToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay">
            </android.support.v7.widget.Toolbar>
            <com.miguelcatalan.materialsearchview.MaterialSearchView
                android:id="@+id/mainSearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"/>
        </FrameLayout>

        <LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
            android:orientation="horizontal">
			<Button
                android:id="@+id/mainButtonFilterPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_filter_button"
                android:minHeight="32dp"
                android:textAllCaps="false"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/popular" />
            <Button
                android:id="@+id/mainButtonFilterTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_filter_button"
                android:minHeight="32dp"
                android:textAllCaps="false"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/top_rated"/>
            <Button
                android:id="@+id/mainButtonFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_filter_button"
                android:minHeight="32dp"
                android:textAllCaps="false"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/my_favorite"/>
		</LinearLayout>

    </android.support.design.widget.AppBarLayout>
    
    <include layout="@layout/content_main"/>
    
</LinearLayout>